# codex

./: demo_git_graph_integration.md
.github/workflows/: ci.yml
codex-rs/: .gitignore  Cargo.toml  justfile  rustfmt.stable.toml
codex-rs/TUMIX-paper/: algorithmic.sty  google.cls  googlecloud.cls  iclr2026_conference.bib  main.bbl  main.tex  ref.bib
codex-rs/TUMIX-paper/sections/: abstract.tex  appendix.tex  conclusion.tex  discussion.tex  experiment.tex  introduction.tex  method.tex  related.tex  statement.tex
codex-rs/ansi-escape/src/: lib.rs
codex-rs/apply-patch/src/: lib.rs  parser.rs
codex-rs/arg0/src/: lib.rs
codex-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  login.rs  main.rs  mcp_cmd.rs  proto.rs
codex-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
codex-rs/common/src/: approval_presets.rs  config_summary.rs  fuzzy_match.rs
codex-rs/core/src/: auth.rs  (+40 more)
codex-rs/cxresume/: .gitignore  package-lock.json  package.json
codex-rs/docs/: tumix.md
codex-rs/git-graph/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tumix/: CLI_INTEGRATION.md  Cargo.toml  FINAL_FIX.md  FIX_SUMMARY.md  GUI_INTEGRATION.md  IMPLEMENTATION.md  README.md  test-round1.sh
codex-rs/tumix/examples/: tumix-test.rs
codex-rs/tumix/src/: control.rs  executor.rs  lib.rs  meta.rs  worktree.rs
cxresume/: .gitignore  .npmignore  README-zh.md  README.md
cxresume/docs/: cxresume-flow.aux  cxresume-flow.out  cxresume-flow.puml  cxresume-flow.tex  index.html
cxresume/src/: index.js
(+213 files in other folders)
